fixing social links spacing

--- a/style.css
+++ b/style.css
@@ -79,6 +79,9 @@ h1 {
   display: flex;
   padding: 0;
   list-style-type: none;
+}
+
+.socials img {
   margin-right: 20px;
 }
 
